--- a/config.ini
+++ b/config.ini
@@ -3,9 +3,11 @@ ipaddress = 10.0.0.1
 username = admin
 password = P@ssw0rd
 port = 443
-secret = passforca123
+secret = Passforca!23
 interface = inside
 domain = www.example.com
-certpath = /etc/letsencrypt/live/www.example.com/
+certpath = /etc/letsencrypt/live/www.domain.com/
 webroot = /var/www/html/letsencrypt/
-test-cert = True
+testcert = True
+pin = True
+
