include Email address

--- a/config.ini
+++ b/config.ini
@@ -10,4 +10,4 @@ certpath = /etc/letsencrypt/live/www.domain.com/
 webroot = /var/www/html/letsencrypt/
 testcert = True
 pin = True
-
+email = someone@example.com
